Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-29040

Rebalance fails due to "Invalid format specified for DCP_DELETION"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.5.0
    • 5.0.1, 5.1.1, 5.5.0
    • couchbase-bucket
    • ubuntu cluster

    Description

      Build: 5.5.0-2361

      Rebalance failed with following error when we remove data node and add eventing node

      Rebalance exited with reason {badmatch, {error, {failed_nodes, ['ns_1@172.23.105.63','ns_1@172.23.106.14']}}}

      error.log

      [user:error,2018-04-02T21:53:32.791-07:00,ns_1@172.23.106.14:<0.12930.2>:ns_orchestrator:do_log_rebalance_completion:1122]Rebalance exited with reason {badmatch,
      {error,
      {failed_nodes,
      ['ns_1@172.23.105.63','ns_1@172.23.106.14']}}}

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vikas.chaudhary Vikas Chaudhary
            vikas.chaudhary Vikas Chaudhary
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty