MB-29040: Log the mcbp::header and any extras for invalid commands

Capturing the header and extras in the logs may help to solve bugs
without requiring complicated recreates and tcpdumps. We already
log the "Invalid format" message, so this shouldn't 'spam' the logs.

Change-Id: I145dea5910823254039ce79fa7248166f0a7fb95
Reviewed-on: http://review.couchbase.org/92318
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Tim Bradgate <tim.bradgate@couchbase.com>